# ditherance

./: .gitignore  BUILD_INSTRUCTIONS.txt  CMakeCache.txt  CMakeLists.txt  Makefile  build.bat  build_with_CMAKE.bat  cmake_install.cmake  main.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
qtproject_autogen/: deps
src/: Main.cpp  main.cpp
src/data/: Image.cpp  Image.h
src/gui/: ControlPanel.cpp  ControlPanel.h  ImagePreviewPanel.cpp  ImagePreviewPanel.h  MainWindow.cpp  MainWindow.h  ToolBar.cpp  ToolBar.h
